loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:2: error: not found: value t
if (isFacingWall){t=isFacingWall  }  
                  ^LoopWhile:3: error: not found: value t
  else{while (t!=True){forward()}} 
              ^LoopWhile:3: error: not found: value True
  else{while (t!=True){forward()}} 
                 ^