loopwhile.LoopWhile.scala.code

if (isFacingWall){t=isFacingWall	}	
	else{while (t!=True){forward()}}